wrapper border align fix

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ div.birds {
     position: absolute;
     width: 540px;
     left: 50%;
-    margin-left: -300px;
+    margin-left: -302px;
     height: 600px;
     top: 50%;
     margin-top: -350px;
@@ -309,7 +309,7 @@ body.cinema {
     border: 2px solid rgba(95, 158, 160, 0.7);
     width: 900px;
     left: 50%;
-    margin-left: -450px;
+    margin-left: -472px;
     height: 650px;
     top: 50%;
     margin-top: -330px;
